--- a/demoApp3/WebContent/index.html
+++ b/demoApp3/WebContent/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <body>
-<form action="add">
+
+<!--  add function is recognized by the servlet in web.xml, which eventually calls addservlet.java 
+based on the servlet class -->
+<form action="add" method="get">
 
 Enter 1st number : <input type="text" name="num1"> <br>
 Enter 2nd number : <input type="text" name="num2"> <br>
